--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000FE;
-	background-color: #DF03B6;
+	color: #000002;
+	background-color: #70F35D;
 }
 
 #page
@@ -95,7 +95,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 154px;
+	margin-top: 174px;
 	width: 51.88%;
 	left: 23.96%;
 }
@@ -103,11 +103,11 @@
 #u153-4
 {
 	z-index: 22;
-	min-height: 113px;
+	min-height: 111px;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 3px;
 	border-color: #FFFFFF;
-	background-color: transparent;
+	background-color: #000000;
 	border-radius: 10px;
 	line-height: 54px;
 	font-size: 30px;
@@ -116,9 +116,9 @@
 	letter-spacing: -2px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 563px;
-	width: 52.09%;
-	left: 23.86%;
+	margin-top: 562px;
+	width: 51.88%;
+	left: 23.75%;
 }
 
 #u156-4
@@ -142,20 +142,20 @@
 #u159-23
 {
 	z-index: 30;
-	min-height: 113px;
+	min-height: 111px;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 3px;
 	border-color: #FFFFFF;
-	background-color: transparent;
+	background-color: #000000;
 	border-radius: 10px;
 	font-size: 22px;
 	text-align: left;
 	line-height: 40px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 1010px;
-	width: 65.11%;
-	left: 17.4%;
+	margin-top: 1009px;
+	width: 64.9%;
+	left: 17.3%;
 }
 
 #u159-21 > #u159-5:before,#u159,#u159-4,#u159-21 > #u159-10:before,#u159-6,#u159-9,#u159-21 > #u159-15:before,#u159-11,#u159-14,#u159-21 > #u159-20:before,#u159-16,#u159-19
@@ -166,9 +166,7 @@
 #u160-4
 {
 	z-index: 53;
-	min-height: 31px;
-	border-style: solid;
-	border-width: 1px;
+	min-height: 32px;
 	border-color: #FFFFFF;
 	background-color: transparent;
 	line-height: 29px;
@@ -178,27 +176,24 @@
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 978px;
-	width: 30.42%;
+	width: 30.53%;
 	left: 34.69%;
 }
 
 #u171-4
 {
 	z-index: 57;
-	min-height: 31px;
-	border-style: solid;
-	border-width: 1px;
+	min-height: 32px;
 	border-color: #FFFFFF;
 	background-color: transparent;
 	line-height: 29px;
 	font-size: 24px;
 	text-align: center;
 	color: #FFFFFF;
-	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 1590px;
-	width: 30.42%;
+	width: 30.53%;
 	left: 34.59%;
 }
 
@@ -216,9 +211,21 @@
 	left: 24.59%;
 }
 
-#pu437
+#pu451
 {
 	margin-top: -2px;
+	width: 100%;
+}
+
+#u451
+{
+	z-index: 4;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 1620px;
 	width: 100%;
 }
 
@@ -231,6 +238,21 @@
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 540px;
+	width: 100%;
+}
+
+#u439
+{
+	z-index: 8;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: transparent;
+	-webkit-transform: matrix(-1,0,0,-1,960,540);
+	-ms-transform: matrix(-1,0,0,-1,960,540);
+	transform: matrix(-1,0,0,-1,960,540);
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 1080px;
 	width: 100%;
 }
 
@@ -251,11 +273,11 @@
 #u174-19
 {
 	z-index: 61;
-	min-height: 692px;
+	min-height: 690px;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 3px;
 	border-color: #FFFFFF;
-	background-color: transparent;
+	background-color: #000000;
 	border-radius: 10px;
 	line-height: 31px;
 	font-size: 22px;
@@ -263,15 +285,100 @@
 	color: #FFFFFF;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 18px;
-	width: 31.05%;
-	left: 18.75%;
+	margin-top: 17px;
+	width: 30.84%;
+	left: 18.65%;
 }
 
 #u174,#u174-3,#u174-5,#u174-7,#u174-9,#u174-11,#u174-13,#u174-15,#u174-17
 {
 	padding-right: 25px;
 	padding-left: 5px;
+}
+
+#u184-4
+{
+	z-index: 80;
+	min-height: 32px;
+	border-color: #FFFFFF;
+	background-color: transparent;
+	line-height: 29px;
+	font-size: 24px;
+	text-align: center;
+	color: #FFFFFF;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 1174px;
+	width: 30.53%;
+	left: 34.69%;
+}
+
+#u192-6
+{
+	z-index: 84;
+	min-height: 211px;
+	border-style: solid;
+	border-width: 3px;
+	border-color: #FFFFFF;
+	background-color: #000000;
+	border-radius: 10px;
+	line-height: 26px;
+	font-size: 22px;
+	text-align: center;
+	color: #FFFFFF;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 1249px;
+	width: 51.57%;
+	left: 23.86%;
+}
+
+#u192,#u192-3
+{
+	padding-right: 25px;
+	padding-left: 25px;
+}
+
+#u192-4
+{
+	padding-right: 50px;
+	padding-left: 50px;
+}
+
+#u195-4
+{
+	z-index: 90;
+	min-height: 32px;
+	border-color: #FFFFFF;
+	background-color: transparent;
+	line-height: 29px;
+	font-size: 24px;
+	text-align: center;
+	color: #FFFFFF;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 1921px;
+	width: 30.53%;
+	left: 34.8%;
+}
+
+#u196-11
+{
+	z-index: 94;
+	min-height: 140px;
+	border-style: solid;
+	border-width: 3px;
+	border-color: #FFFFFF;
+	background-color: #000000;
+	border-radius: 10px;
+	font-size: 24px;
+	text-align: center;
+	line-height: 40px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 1987px;
+	width: 51.57%;
+	left: 23.86%;
 }
 
 #u220
@@ -282,10 +389,9 @@
 	border-color: #FFFFFF;
 	background-color: transparent;
 	border-radius: 10px;
-	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 748px;
+	margin-top: 800px;
 	width: 52.09%;
 	left: 23.75%;
 }
@@ -295,23 +401,28 @@
 	-webkit-border-radius: 9px 9px 9px 9px;
 }
 
+#pu416,#u416_img,#u423_img,#u376_img,#u94_img,#u102_img,#u129_img,#u406_img,#u451_img,#u437_img,#u439_img,#u425_img,#u220_img
+{
+	width: 100%;
+}
+
 #u230-21
 {
 	z-index: 107;
-	min-height: 692px;
+	min-height: 690px;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 3px;
 	border-color: #FFFFFF;
-	background-color: transparent;
+	background-color: #000000;
 	border-radius: 10px;
 	font-size: 22px;
 	text-align: left;
 	color: #FFFFFF;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 18px;
-	width: 31.05%;
-	left: 51.78%;
+	margin-top: 17px;
+	width: 30.84%;
+	left: 51.67%;
 }
 
 #u230,#u230-3,#u230-5,#u230-7,#u230-9,#u230-11,#u230-13,#u230-15,#u230-17
@@ -337,126 +448,6 @@
 	line-height: 31px;
 	padding-right: 25px;
 	padding-left: 5px;
-}
-
-#u451
-{
-	z-index: 4;
-	border-width: 0px;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 540px;
-	width: 100%;
-}
-
-#u439
-{
-	z-index: 8;
-	border-width: 0px;
-	border-color: transparent;
-	background-color: transparent;
-	-webkit-transform: matrix(-1,0,0,-1,960,540);
-	-ms-transform: matrix(-1,0,0,-1,960,540);
-	transform: matrix(-1,0,0,-1,960,540);
-	position: relative;
-	margin-right: -10000px;
-	width: 100%;
-}
-
-#pu416,#u416_img,#u423_img,#u376_img,#u94_img,#u102_img,#u129_img,#u406_img,#u437_img,#u425_img,#u220_img,#pu451,#u451_img,#u439_img
-{
-	width: 100%;
-}
-
-#u184-4
-{
-	z-index: 80;
-	min-height: 31px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #FFFFFF;
-	background-color: transparent;
-	line-height: 29px;
-	font-size: 24px;
-	text-align: center;
-	color: #FFFFFF;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 94px;
-	width: 30.42%;
-	left: 34.69%;
-}
-
-#u192-6
-{
-	z-index: 84;
-	min-height: 215px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #FFFFFF;
-	background-color: transparent;
-	border-radius: 10px;
-	line-height: 26px;
-	font-size: 22px;
-	text-align: center;
-	color: #FFFFFF;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 169px;
-	width: 51.98%;
-	left: 23.86%;
-}
-
-#u192,#u192-3
-{
-	padding-right: 25px;
-	padding-left: 25px;
-}
-
-#u192-4
-{
-	padding-right: 50px;
-	padding-left: 50px;
-}
-
-#u195-4
-{
-	z-index: 90;
-	min-height: 31px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #FFFFFF;
-	background-color: transparent;
-	line-height: 29px;
-	font-size: 24px;
-	text-align: center;
-	color: #FFFFFF;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 841px;
-	width: 30.42%;
-	left: 34.8%;
-}
-
-#u196-11
-{
-	z-index: 94;
-	min-height: 144px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #FFFFFF;
-	background-color: transparent;
-	border-radius: 10px;
-	font-size: 24px;
-	text-align: center;
-	line-height: 40px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 907px;
-	width: 51.98%;
-	left: 23.86%;
 }
 
 #muse_css_mq,.html
